force-app/main/default/objects/Settings__mdt/Settings__mdt.object-meta.xml
<CustomObject>
    <description>Settings metadata where to store the different configuration settings from our platform</description>
    <label>Settings</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>