force-app/main/default/objects/Settings__mdt/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time in milliseconds that we want the rate to expire</description>
    <label>Time</label>
    <length>80</length>
    <type>Text</type>
</CustomField>