force-app/main/default/objects/Settings__mdt/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>Time in milliseconds that we want the rate to expire</description>
    <label>Timestamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>