force-app/main/default/objects/Settings__mdt/fields/TimeStamp_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>TimeStamp_Last_Update__c</fullName>
    <description>Timestamp from last update of the currencies in the cache</description>
    <label>TimeStamp Last Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>